Fix header leaving a gap after a transition

--- a/src/less/flight.android.less
+++ b/src/less/flight.android.less
@@ -104,6 +104,7 @@ header, footer {
   text-align: center;
   .box-sizing;
   top: 0;
+  left: 0;
   right: 0;
   position: fixed;
   z-index: 999;
